--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   --heading: 'Playfair Display', serif;
   --body: 'Lato', sans-serif;
   --accent-color: #0d680d;
+  --hover: #0d680dd4;
   --white: #ffffff;
+  --primary-color: #EFDECD;
 }
 
 *{
@@ -30,6 +32,7 @@ body {
 
 h1{
   font-family: var(--heading);
+  
 }
 
 ul li {
@@ -51,7 +54,7 @@ header{
 
 button, .login-button{
   border: none;
-  border-radius: 15rem;
+  border-radius: .2rem;
   padding: 0.5rem 1.5rem;
   cursor: pointer;
   font-family: var(--body);
@@ -80,6 +83,16 @@ button, .login-button{
   background-color: #e9e9e9;
 }
 
+.search-button{
+  margin-bottom: 1rem;
+  background-color: var(--accent-color);
+  color: var(--white);
+}
+
+.search-button:hover{
+  background-color: var(--hover);
+}
+
 .profile-container{
   padding: 1rem;
   display: flex;
@@ -92,13 +105,20 @@ button, .login-button{
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 1.5rem 0;
 }
 
 .artist-container{
+  margin-top: 0.8rem;
+  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(10, 0.5fr);
-  gap: 0.5rem;
+  gap: 1rem;
   justify-content: center;
+  background-color: var(--primary-color);
+  border-radius: 3px;
+  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
+
 }
 
 .artist-cards span{
@@ -109,4 +129,23 @@ button, .login-button{
  display: flex;
  align-items: center;
  flex-direction: column;
+}
+
+.avatar{
+  width: 100px;
+  height: 100px;
+}
+
+.profile-card{
+  margin-top: 1rem;
+  text-align: center;
+  background-color: var(--primary-color);
+  width: 100%;
+  padding: 2rem;
+  border-radius: 3px;
+  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
+}
+
+.profile-card p {
+  margin: 0.2rem;
 }
