used state to check for recent data if not disable the related button. conditionally rendered classname for disabled button.

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,6 @@ header{
   align-items: center;
   margin: 1rem 0;
   min-width: 100%;
-  border: 2px solid red;
 }
 
 .recent-container{
@@ -133,9 +132,10 @@ button, .login-button{
   color: black;
   text-decoration: none;
   background-color: var(--white);
+  padding: 0.45rem 1.5rem;
 }
 
-.login-button:hover{
+.login-button:hover, .logout-button:hover{
   transform: translateY(-1px);
   background-color: #e9e9e9;
 }
@@ -146,11 +146,6 @@ button, .login-button{
   transition: transform 0.3s ease;
 }
 
-.logout-button:hover{
-  transform: translateY(-1px);
-  background-color: #e9e9e9;
-}
-
 .search-button{
   margin: 1rem 0.5rem 0;
   background-color: var(--accent-color);
@@ -159,6 +154,11 @@ button, .login-button{
 
 .search-button:hover{
   background-color: var(--hover);
+}
+
+.search-button.disabled:hover{
+  cursor: not-allowed !important;
+  opacity: 0.6;
 }
 
 /* Images */
