--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,19 @@ body {
 
 h1{
   font-family: var(--heading);
-  font-size: clamp(0.8rem, 1rem + 4vw, 1.7rem);
-  
+  font-size: clamp(1.13rem, 1rem + 1.22vw, 1.75rem);
+}
+
+h2,h3,h4{
+  font-family: var(--body);
+  font-size: clamp(1rem, 0.8rem + 1vw, 1.2rem);
+
+}
+
+a{
+  font-family: var(--body);
+  color: var(--accent-color);
+  font-size: 0.9rem;
 }
 
 /* Header Classes */
@@ -65,16 +76,13 @@ header{
 .container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 1rem 0;
-  min-width: 100%;
 }
 
 .recent-container{
   margin: 0.5rem;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
   gap: 1rem;
   background-color: var(--primary-color);
   border-radius: 3px;
@@ -85,7 +93,7 @@ header{
   margin: 0.8rem;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   background-color: var(--primary-color);
   border-radius: 3px;
@@ -126,13 +134,14 @@ button, .login-button{
   cursor: pointer;
   font-family: var(--body);
   letter-spacing: 0.05rem;
+  font-size: 0.8rem;
 }
 
 .login-button{
   color: black;
   text-decoration: none;
   background-color: var(--white);
-  padding: 0.45rem 1.5rem;
+  padding: 0.5rem 1.5rem;
 }
 
 .login-button:hover, .logout-button:hover{
@@ -143,7 +152,6 @@ button, .login-button{
 .logout-button{
   color: black;
   background-color: var(--white);
-  transition: transform 0.3s ease;
 }
 
 .search-button{
@@ -164,6 +172,8 @@ button, .login-button{
 /* Images */
 
 .avatar{
-  width: 80px;
-  height: 80px;
+  width: 150px;
+  height: 150px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
 }
