hero paragraph update

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -5,7 +5,7 @@
 
 .hero-container{
     margin: 2rem 0;
-    border: solid red 3px;
+    border: solid #0d680d 3px;
     display: grid;
     gap: 0.7rem;
     max-width: 55rem;
