--- a/src/index.css
+++ b/src/index.css
@@ -68,10 +68,10 @@ header{
 /* Layout */
 
 .profile-container{
-  padding: 1rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  margin: 0.5rem;
 }
 
 .container{
@@ -115,7 +115,6 @@ header{
 
 .profile-card{
   text-align: center;
-  margin: 0.5rem;
   background-color: var(--primary-color);
   padding: 2rem;
   border-radius: 3px;
@@ -180,20 +179,21 @@ button, .login-button{
 }
 
 .profile-avatar{
-  width: 64px;
-  height: 64px;
+  width: 100px;
+  height: 100px;
   border-radius: 40px;
 }
 
 /* Hero Section */
 
 .hero-container {
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: calc(100vh - 5rem);
-  background-image: url(/src/assets/hero1.jpg); 
+  background-image: url(/src/assets/hero2.jpg); 
   background-size: cover;
-  background-position: center;
+  background-position: top;
 }
 
 .hero-cta-container {
@@ -206,6 +206,7 @@ button, .login-button{
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
+  margin: 0 1rem;
 }
 
 .hero-paragraph{
@@ -213,3 +214,4 @@ button, .login-button{
   line-height: 1.4;
   font-size: 1.1rem;
 }
+
