--- a/src/components/Tabs/tabs.scss
+++ b/src/components/Tabs/tabs.scss
@@ -1,17 +1,29 @@
+$hover-color: #0d680dd4;
+
 
 .tabs-container{
     display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
 }
 
 .tabs{
     font-size: 1rem;
+    color: black;
     padding: 10px 60px;
     cursor: pointer;
     opacity: 0.6;
     background: white;
     border: 0;
     outline: 0;
-    border-radius: 0;
+    border-radius: 2px;
+}
+
+.tabs:hover{
+   background-color: $hover-color;
+   color: white;
+
 }
 
 .active-tab{
