--- a/src/index.css
+++ b/src/index.css
@@ -67,27 +67,31 @@ header{
 
 /* Layout */
 
-.profile-container{
+.flex-center{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 0.5rem;
+  align-items: center;
 }
 
 .container{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: var(--primary-color);
+  max-width: 67rem;
+  margin: 0.5rem auto;
+  padding: 1rem;
+  border-radius: 3px;
+  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
 }
 
 .recent-container{
-  margin: 0.5rem;
-  padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-  gap: 1rem;
-  background-color: var(--primary-color);
-  border-radius: 3px;
-  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+  
 }
 
 .related-container{
@@ -116,7 +120,9 @@ header{
 .profile-card{
   text-align: center;
   background-color: var(--primary-color);
-  padding: 2rem;
+  max-width: 67rem;
+  margin: 0.5rem auto;
+  padding: 1rem;
   border-radius: 3px;
   box-shadow: rgb(202, 202, 202) 3px 2px 2px;
 }
@@ -215,3 +221,9 @@ button, .login-button{
   font-size: 1.1rem;
 }
 
+
+@media (min-width: 1000px) {
+  .recent-container{
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+}
