added arrow icon, changed the <a> tags to <p> and created a function to open a new window on artist-card click

--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@600&display=swap');
 
-:root{
-  --heading: 'Playfair Display', serif;
-  --body: 'Lato', sans-serif;
-  --accent-color: #0d680d;
-  --hover: #0d680dd4;
-  --white: #ffffff;
-  --primary-color: #EFDECD;
-}
+
 
 *{
   margin: 0;
@@ -41,13 +34,11 @@ h1{
 h2,h3,h4{
   font-family: var(--body);
   font-size: clamp(1rem, 0.8rem + 1vw, 1.2rem);
-
+  margin-bottom: 1rem;
 }
 
 a{
   font-family: var(--body);
-  color: var(--accent-color);
-  font-size: 0.9rem;
 }
 
 /* Header Classes */
@@ -87,34 +78,26 @@ header{
   box-shadow: rgb(202, 202, 202) 3px 2px 2px;
 }
 
-.recent-container{
+.data-container{
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1.5rem;
   
 }
 
-.related-container{
-  margin: 0.8rem;
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1rem;
-  background-color: var(--primary-color);
-  border-radius: 3px;
-  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
-}
-
-.artist-cards span{
-  margin-top: 0.3rem;
+.artist-cards p{
+  margin-top: 0.5rem;
   text-align: center;
-  font-size: 0.8rem;
+  font-size: clamp(0.7rem, 0.9rem + 1vw, 1rem);
+  color:black;
 }
 
 .artist-cards{
- display: flex;
- align-items: center;
- flex-direction: column;
+  display: grid;
+  grid-template-rows: repeat(1, auto);
+  gap: 0.5rem;
+  align-items: center;
+  place-items: center;
 }
 
 .profile-card{
@@ -130,6 +113,7 @@ header{
 .profile-card p {
   margin: 0.3rem;
 }
+
 
 /* BUTTONS */
 
@@ -223,7 +207,7 @@ button, .login-button{
 
 
 @media (min-width: 1000px) {
-  .recent-container{
+  .data-container{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
 }
