--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,116 @@
+/* Utility classes */
+
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@600&display=swap');
 
+$heading-font: 'Playfair Display', serif;
+$body-font: 'Lato', sans-serif;
+$accent-color: #0d680d;
+$hover-color: #0d680dd4;
+$white-color: #ffffff;
+$primary-color: #EFDECD;
 
-$heading-font: 'Playfair Display', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-family: $body-font;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+h1 {
+  font-family: $heading-font;
+  font-size: clamp(1.13rem, 1rem + 1.22vw, 1.8rem);
+}
+
+h2, h3, h4 {
+  font-family: $body-font;
+  font-size: clamp(1rem, 0.8rem + 1vw, 1.2rem);
+  margin-bottom: 1rem;
+}
+
+a {
+  font-family: $body-font;
+}
+
+/* Header Classes */
+
+.logo {
+  color: $white-color;
+}
+
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 5rem;
+  background-color: $accent-color;
+  padding: 0.8rem 1.2rem;
+}
+
+/* Layout */
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: $primary-color;
+  max-width: 67rem;
+  margin: 0.5rem auto;
+  padding: 1rem;
+  border-radius: 3px;
+  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
+}
+
+.data-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+}
+
+
+.artist-cards p {
+  margin-top: 0.5rem;
+  text-align: center;
+  font-size: clamp(0.7rem, 0.9rem + 1vw, 1rem);
+  color: black;
+  text-decoration: underline;
+}
+
+.artist-cards {
+  display: grid;
+  grid-template-rows: repeat(1, auto);
+  gap: 0.5rem;
+  align-items: center;
+  place-items: center;
+}
+
+.artist-cards:hover{
+    cursor: pointer;
+}
+
+/* PROFILE */
 
 .profile-header {
     display: grid;
@@ -30,4 +139,132 @@ $heading-font: 'Playfair Display', sans-serif;
       }
     }
   }
-  
+
+.profile-card {
+  text-align: center;
+  background-color: $primary-color;
+  max-width: 67rem;
+  margin: 0.5rem auto;
+  padding: 1rem;
+  border-radius: 3px;
+  box-shadow: rgb(202, 202, 202) 3px 2px 2px;
+}
+
+.profile-card p {
+  margin: 0.3rem;
+}
+
+/* Tabs */
+
+.tabs-container{
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    margin-top: 0.75rem;
+}
+
+.tabs{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    color: black;
+    padding: 10px 60px;
+    cursor: pointer;
+    opacity: 0.6;
+    background: white;
+    border: 0;
+    outline: 0;
+    border-radius: 2px;
+}
+
+.tabs:hover{
+   background-color: $hover-color;
+   color: white;
+}
+
+.active-tab{
+    border-bottom: 2px solid black;
+    opacity: 1;
+}
+
+@media (max-width: 430px) {
+    .tabs {
+        width: 8rem;
+    }
+}
+
+/* BUTTONS */
+
+button, .login-button {
+  border: none;
+  border-radius: .2rem;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  font-family: $body-font;
+  letter-spacing: 0.05rem;
+  font-size: 0.8rem;
+}
+
+.login-button {
+  color: black;
+  text-decoration: none;
+  background-color: $white-color;
+  padding: 0.5rem 1.5rem;
+}
+
+.login-button:hover, .logout-button:hover {
+  transform: translateY(-1px);
+  background-color: #e9e9e9;
+}
+
+.logout-button {
+  color: black;
+  background-color: $white-color;
+}
+
+/* Images */
+
+.avatar {
+  width: 150px;
+  height: 150px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+
+
+/* Hero Section */
+
+.hero-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 5rem);
+  background-image: url(../src/assets/hero2.jpg); 
+  background-size: cover;
+  background-position: top;
+}
+
+.hero-cta-container {
+  border: solid #0d680d 3px;
+  display: grid;
+  gap: 1.3rem;
+  max-width: 55rem;
+  place-items: center;
+  padding: 2.5rem;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(8px);
+  margin: 0 1rem;
+}
+
+.hero-paragraph {
+  text-align: center;
+  line-height: 1.4;
+  font-size: 1.1rem;
+}
+
+@media (min-width: 1000px) {
+  .data-container {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
